--- a/town_hall_1/styles/c6_main.css
+++ b/town_hall_1/styles/c6_main.css
@@ -4,7 +4,7 @@
 	padding: 0;
 }
 html {
-	background-color: white;
+	background-color:yellow;
 }
 body {
     font-family: Arial, Helvetica, sans-serif;
@@ -19,7 +19,7 @@ body {
 section {
     width: 525px;
     float: right;
-    padding: 0 20px 20px 20px;
+    padding: 20px 20px 20px 20px;
 }
 
 /* Set aside width and float right */
@@ -89,7 +89,7 @@ main {
 	clear: left;
 }
 main {
-	
+	padding: 0;
 }
 main h1 {
     font-size: 150%;
@@ -124,6 +124,17 @@ main li {
 }
 
 /* the styles for the article */
+h1 {
+	font-size: 150%;
+	padding-top: 0.5em;
+	padding-bottom: 0.25em;
+	margin: 0;
+}
+article img{
+	float: right;
+	margin: 10px 0 10px;
+	border: 1px solid #0000;
+}
 article {
 	padding: .5em 0;
 	border-top: 2px solid #800000;
